<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="seebee.geebeeview.layout.DataVisualizationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_dv_back"
            style="@style/DefaultButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/btn_back"/>
        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btn_dv_back"
            android:text="@string/data_visualization" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    style="@style/LabelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dataset"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_dv_dataset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
            <Button
                android:id="@+id/btn_add_dataset"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_dataset"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    style="@style/LabelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_dv_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
            <Button
                android:id="@+id/btn_add_filter"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_filter"/>
            <TextView
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chart"/>
            <Spinner
                android:id="@+id/sp_chart_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/chart_type_array">
            </Spinner>
            <TextView
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displayed_data"/>
            <Spinner
                android:id="@+id/sp_record_column"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/record_column_array">
            </Spinner>
            <Button
                android:id="@+id/btn_view_hpi_list"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_HPI_list"/>
            <Button
                android:id="@+id/btn_view_patient_list"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_patient_list"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/graph_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
