<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/DefaultText"
        android:id="@+id/tv_dataset_sname"
        android:text="@string/school"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/DefaultText"
        android:id="@+id/tv_dataset_date"
        android:textAlignment="center"
        android:text="@string/date"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/DefaultButton"
        android:id="@+id/btn_dataset_status"
        android:text="@string/download"/>
</LinearLayout>